--- a/views/Partials/footer.ejs
+++ b/views/Partials/footer.ejs
@@ -1,2 +1,14 @@
+
+        <footer class="footer d-flex justify-content-center bg-primary">
+            <nav class="navbar fixed-bottom navbar-expand-lg navbar-light bg-primary ">
+                
+                <div class="container d-flex justify-content-center bg-primary " >
+                    <a class="text-light mx-1" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Youtube</a>
+                    <a class="text-light mx-1" href="https://www.instagram.com/andy__andy__/">Instagram</a>
+                    <a class="text-light mx-1" href="https://github.com/AndyAND-Y?tab=repositories">GitHub</a>
+                </div>
+			
+			</nav>
+        </footer>
     </body>
 </html>
