--- a/views/Pages/homePage.ejs
+++ b/views/Pages/homePage.ejs
@@ -1,41 +1,103 @@
 <%- include('../partials/header'); -%>
 
-        <style>
-            @media (min-width: 768px) {
-            .h-md-100 { height: 100vh; }
-            }
-            .btn-round { border-radius: 30px; }
-            .bg-image1 { 
-                background-image: url('https://i.guim.co.uk/img/media/26392d05302e02f7bf4eb143bb84c8097d09144b/446_167_3683_2210/master/3683.jpg?width=620&quality=45&auto=format&fit=max&dpr=2&s=6fe0ebd22151102996062fa1287f824c'); 
-                background-repeat: no-repeat;
-                height: 100%;
-            }
-            .bg-image2 { 
-                background-image: url('https://cdn-prod.medicalnewstoday.com/content/images/articles/322/322868/person-walking-two-dogs.jpg'); 
-                background-repeat: no-repeat;
-                height: 100%;
-            }
-            .text-cyan { color: #35bdff; }
-        </style>
+<main class="mt-3">
+    <div style="height: 2vh;"></div>
+    <div class="container d-flex justify-content-center">
+		<div>
+			<div class="d-flex justify-content-center">
+				<h1 class="display-1 text-primary"><u>PetBook</u></h1>
+			</div>
 
+			<hr
+				class="bg-primary border-3 border-top border-primary mt-3"
+				style="width: 100vw"
+			/>
 
-        <div class="d-md-flex h-md-100 align-items-center">
+			<div class="d-flex justify-content-center">
+				<p class="blockquote text-primary text-wrap display-3">
+					Cel mai tare social app pentru animale de casa.
+				</p>
+			</div>
 
-            
-            <div class="col-md-6 p-0 bg-image1 h-md-100">
-                <div class="text-black d-md-flex align-items-center h-100 p-5 text-center justify-content-center">
-                    <div class="logoarea pt-5 pb-5">
-                        
-                    </div>
-                </div>
+			<div class="d-flex justify-content-center">
+				<p class="blockquote text-primary text-wrap display-3">
+					Poti posta pozele preferate impreuna cu animalul tau de
+					companie
+				</p>
+			</div>
+		</div>
+	</div>
+    <hr
+		class="bg-primary border-3 border-top border-primary mt-3"
+		style="width: 100vw"
+	/>
+
+	<div class="container-fluid" >
+		<div id="carouselExampleControls" class="carousel slide carousel-fade" data-bs-ride="carousel"> 
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="data: <%= posts[0].image.contentType %> ;base64, <%= posts[0].image.data.toString('base64') %> " class="img-fluid d-block w-100"  alt="1" style="height: 80vh;">
+              </div>
+              <div class="carousel-item">
+                <img src="data: <%= posts[1].image.contentType %> ;base64, <%= posts[1].image.data.toString('base64') %> " class="img-fluid d-block w-100"  alt="2" style="height: 80vh;">
+              </div>
+              <div class="carousel-item">
+                <img src="data: <%= posts[2].image.contentType %> ;base64, <%= posts[2].image.data.toString('base64') %> " class="img-fluid d-block w-100"  alt="3" style="height: 80vh;">
+              </div>
             </div>
-            
-            <div class="col-md-6 p-0 bg-image2 h-md-100">
-                <div class="d-md-flex align-items-center h-md-100 p-5 justify-content-center">
-                    
-                </div>
-            </div>
-                
-        </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+	</div>
+    <hr
+		class="bg-primary border-3 border-top border-primary mt-3"
+		style="width: 100vw"
+	/>
+
+	<div class="container-fluid">
+		<div class="d-flex justify-content-center">
+			<h1 class="display-1 text-primary">Pets types</h1>
+		</div>
+
+	</div>
+	<hr
+		class="bg-primary border-3 border-top border-primary mt-3"
+		style="width: 100vw"
+	/>
+
+	<div class="container d-flex justify-content-center" style="margin-left: 9vw;margin-right: 9vw;" >
+		<div class="row row-cols-1 row-cols-sm-3 row-cols-md-3 g-2 ">
+			
+			<% categories.forEach( (category) => { %>
+				<div class="col">
+					<div class="card border-primary shadow-lg p-3 mb-5 bg-light rounded" style="min-width: 10rem ; max-width: 20rem ; height: 14rem;">
+						<div class="card-header d-flex justify-content-center"> 
+							
+							<p class="text-primary"> <a href="/post/category/<%=category.name%>" > <%=category.name.toUpperCase()%></a>  <%= category.count %> </p>
+							
+						</div>
+						<div class="card-body text-primary">
+							<h5 class="card-title">Post from <%= category.name %>s category.</h5>
+							<p class="card-text display-8" style="min-width: 10rem;" > We love all the <%= category.name %>s. Here are some posts with <a href="/post/category/<%=category.name%>"> <%= category.name %>s. </a> </p>
+						</div>
+					</div>
+				</div>
+			<%})%>
+		</div>
+	</div>
+
+	<hr
+		class="bg-primary border-3 border-top border-primary mt-3"
+		style="width: 100vw"
+	/>
+
+    <div style="height: 2vh;"></div>
+</main>
 
 <%- include('../partials/footer'); -%>
