--- a/views/Partials/header.ejs
+++ b/views/Partials/header.ejs
@@ -4,6 +4,10 @@
 		<meta charset="utf8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		
+		<title> PetBook </title>
+
+		<link rel="icon" href="../icon.ico" type="image/x-icon">
+
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 		<script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
@@ -21,37 +25,40 @@
 		</style>
 
 	</head>
+
+	
 	<body>
 		<header class="mb-5">
 			<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary ">
 				<div class="container-fluid">
-					<a class="navbar-brand text-light" href="#"> <u>PetBook</u></a>
+					<a class="navbar-brand text-light" href="/home"> <u>PetBook</u></a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 							<li class="nav-item">
-								<a class="nav-link text-light hoverBtnProp" aria-current="page" href="#">Home</a>
+								<a class="nav-link text-light hoverBtnProp" aria-current="page" href="/home">Home</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link text-light hoverBtnProp" href="#">About</a>
+								<a class="nav-link text-light hoverBtnProp" href="/about">About</a>
 							</li>
 							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle text-light hoverBtnProp" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								<a class="nav-link dropdown-toggle text-light hoverBtnProp" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 									Animals
 								</a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<li><a class="dropdown-item text-light hoverBtnProp" href="#" >Cats</a></li>
-									<li><a class="dropdown-item text-light hoverBtnProp" href="#">Dogs</a></li>
+									<li><a class="dropdown-item text-light hoverBtnProp" href="/post/category/cat" >Cats</a></li>
+									<li><a class="dropdown-item text-light hoverBtnProp" href="/post/category/dog">Dogs</a></li>
 									<li><hr class="dropdown-divider"></li>
-									<li><a class="dropdown-item text-light hoverBtnProp" href="#">Both of them</a></li>
+									<li><a class="dropdown-item text-light hoverBtnProp" href="/post/category/">All of them</a></li>
 								</ul>
 							</li>
 					
 					</ul>
 					<div class="d-flex">
-						<a class="nav-link text-light hoverBtnProp" href="#">Create Post</a>
+						<a class="nav-link text-light hoverBtnProp" href="/categories/editCategories">Edit Categories</a>
+						<a class="nav-link text-light hoverBtnProp" href="/post/createPost">Create Post</a>
 					</div>
 				</div>
 				</div>
