--- a/views/Pages/createPage.ejs
+++ b/views/Pages/createPage.ejs
@@ -27,15 +27,14 @@
                                         
                                         <div>
                                             <div class="d-flex justify-content-center">
-                                                <h5 class = "mx-1 display-8" id="namePreview">This is {Pet's name} </h5>
-                                                <h5 class = "display-8" id="ownerPreview"> and it's owner is {owner's name}.</h5>
+                                                <h5 class = "mx-1 display-8" id="namePreview">This is {Pet's name} </h5>  <!-- to be modified -->
+                                                <h5 class = "display-8" id="ownerPreview"> and it's owner is {owner's name}.</h5>  <!-- to be modified -->
                                             </div>
                                             <div class="d-flex justify-content-center">
-                                                <h5 class = "mx-1 display-8" id="animalPreview"> It is a cat </h5>
-                                                <h5 class = "display-8" id="moodPreview">and now is feeling {mood}.</h5>
+                                                <h5 class = "mx-1 display-8" id="animalPreview"> It is a cat </h5>  <!-- to be modified -->
+                                                <h5 class = "display-8" id="moodPreview">and now is feeling {mood}.</h5>  <!-- to be modified -->
                                             </div>
                                         </div>    
-                                    
                                     </div>
 
                                     <div class="d-flex justify-content-center">
