--- a/views/Pages/postPage.ejs
+++ b/views/Pages/postPage.ejs
@@ -23,22 +23,13 @@
 
         <div class="d-flex justify-content-center m-3" >
             <h3 class=" display-6">
-                <% if(post.owner !== "") { %>
-                    This is <%= post.name %> and it's owner is <%=post.owner%>.
-                <% } else { %>
-                    This is <%= post.name %>.
-                <%}%>
-                
+                    This is <%= post.name %> and it's owner is <%=post.owner%>. <!-- to be modified -->
             </h3>
         </div>
 
         <div class="d-flex justify-content-center m-3"> 
             <h6 class=" display-6">
-                <% if(post.mood !== "") { %>
-                    It is a <%= post.animal %> and now is feeling <%= post.mood%>.
-                <%} else {%>
-                    It is a <%= post.animal%>.
-                <%}%>
+                    It is a <%= post.animal %> and now is feeling <%= post.mood%>.  <!-- to be modified -->
             </h6>
         </div>
 
