--- a/views/Pages/postPage.ejs
+++ b/views/Pages/postPage.ejs
@@ -23,13 +23,13 @@
 
         <div class="d-flex justify-content-center m-3" >
             <h3 class=" display-6">
-                    This is <%= post.name %> and it's owner is <%=post.owner%>. <!-- to be modified -->
+                    This is <%= post.name %> and its owner is <%=post.owner%>. 
             </h3>
         </div>
 
         <div class="d-flex justify-content-center m-3"> 
             <h6 class=" display-6">
-                    It is a <%= post.animal %> and now is feeling <%= post.mood%>.  <!-- to be modified -->
+                    It is a <%= post.animal %> and now is feeling <%= post.mood%>. 
             </h6>
         </div>
 
